--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ body {
 
 /* Hero section styles */
 .hero {
-  background-color: white;
+  background-color: rgb(236, 189, 189);
   margin-top: 3rem;
 }
 
