--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ body {
   border: 2px solid #4F00BC;
   color: #4F00BC;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .connect-wallet:hover {
@@ -44,10 +45,6 @@ body {
   justify-content: flex-end;
   align-items: center;
   flex-grow: 1;
-}
-
-.connect-wallet {
-  margin-left: auto;
 }
 
 /* Hero section styles */
