--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
 }
 
 .connect-wallet {
-  margin: top;
+  margin: 1rem;
   position: relative;
   border: 2px solid #4F00BC;
   color: #4F00BC;
